fix overflow bugs mobile navigation menu

--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,7 @@ body.no-scroll {
         position: fixed;
         top: 0;
         bottom: 0;
+        /* right: -16px; */
         right: 0;
         z-index: 10;
 
@@ -306,21 +307,18 @@ body.no-scroll {
         gap: 24px;
 
         background-color: var(--clr-neutral-100);
-        max-width: 256px;
-        width: 100%;
+        width: 256px;
         height: 100vh;
         padding-top: 144px;
         padding-inline: 24px;
 
         transform: translateX(0);
         transition: all 600ms ease-in-out;
-
-        overflow-x: hidden;
     }
 
     .header-primary::before {
         content: "";
-        position: absolute;
+        position: fixed;
         inset: 0;
         left: -16px;
         z-index: 10;
@@ -342,8 +340,9 @@ body.no-scroll {
     }
 
     .header-primary.show {
-        overflow: visible;
-        /* overflow-x: hidden; */
+        position: relative;
+        /* overflow: visible; */
+        overflow-y: visible;
     }
 }
 
